--- a/index.html
+++ b/index.html
@@ -4,96 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Science Portfolio</title>
-    <style>
-        /* General Styles */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8; /* Nearly white background */
-            color: white;
-        }
-
-        /* Header */
-        header {
-            text-align: center;
-            padding: 50px 20px;
-            background: rgba(0, 128, 0, 0.2); /* Transparent light green */
-        }
-
-        h1, h2 {
-            margin: 10px 0;
-        }
-
-        /* Sections */
-        .section {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background: rgba(0, 128, 0, 0.3); /* Light transparent green */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Skills Grid */
-        .skills {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 10px;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .skill-box {
-            padding: 10px;
-            background: rgba(0, 128, 0, 0.4);
-            border-radius: 5px;
-        }
-
-        /* Projects */
-        .projects {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-            justify-content: center;
-        }
-
-        .project {
-            width: 250px;
-            padding: 15px;
-            background: rgba(0, 128, 0, 0.4);
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        /* Footer */
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: rgba(0, 128, 0, 0.2);
-        }
-
-        a {
-            color: white;
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+    <!-- Header Section -->
     <header>
         <h1>Your Name</h1>
-        <p>Data Science Engineer | AI Enthusiast | Machine Learning</p>
+        <p>Data Science Engineer | AI & ML Enthusiast | Data Analyst</p>
+        
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+
+        <div class="cta-buttons">
+            <a href="#projects" class="btn">View My Work</a>
+            <a href="#contact" class="btn">Hire Me</a>
+        </div>
+
+        <div class="socials">
+            <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/yourname" target="_blank">LinkedIn</a>
+            <a href="https://kaggle.com/yourprofile" target="_blank">Kaggle</a>
+        </div>
     </header>
 
-    <section class="section">
+    <!-- About Section -->
+    <section id="about">
         <h2>About Me</h2>
-        <p>Welcome to my portfolio. I specialize in data science, machine learning, and AI development. Passionate about building intelligent solutions that make an impact.</p>
+        <p>I am a Data Science Engineer with experience in machine learning, deep learning, and data analytics. Passionate about solving real-world problems using AI.</p>
     </section>
 
-    <section class="section">
+    <!-- Skills Section -->
+    <section id="skills">
         <h2>Skills</h2>
-        <div class="skills">
+        <div class="skills-container">
             <div class="skill-box">Python</div>
             <div class="skill-box">Machine Learning</div>
             <div class="skill-box">Deep Learning</div>
@@ -103,16 +53,17 @@
         </div>
     </section>
 
-    <section class="section">
+    <!-- Projects Section -->
+    <section id="projects">
         <h2>Projects</h2>
-        <div class="projects">
+        <div class="projects-container">
             <div class="project">
                 <h3>Project 1</h3>
-                <p>Stock Price Prediction using Machine Learning</p>
+                <p>Stock Price Prediction using ML</p>
             </div>
             <div class="project">
                 <h3>Project 2</h3>
-                <p>Customer Segmentation using Clustering</p>
+                <p>Customer Segmentation with Clustering</p>
             </div>
             <div class="project">
                 <h3>Project 3</h3>
@@ -121,13 +72,15 @@
         </div>
     </section>
 
-    <section class="section">
-        <h2>Contact</h2>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
         <p>Email: your.email@example.com</p>
         <p>LinkedIn: <a href="#">linkedin.com/in/yourname</a></p>
         <p>GitHub: <a href="#">github.com/yourusername</a></p>
     </section>
 
+    <!-- Footer -->
     <footer>
         <p>© 2025 Your Name. All Rights Reserved.</p>
     </footer>
