--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <section class="contact">
     <h2>Contact Me</h2>
     <hr class="divider">
-    <a href="#">datas293@gmail.com</a>
+    <a href="">datas293@gmail.com</a>
     <a href="https://www.linkedin.com/in/ashik-n-22b36b152/">LinkedIn</a>
     <a href="https://github.com/ashiknazar">GitHub</a>
   </section>
